--- a/style.css
+++ b/style.css
@@ -4,13 +4,11 @@
     box-sizing: border-box;
 }
 
-/* .unclickable {
-    cursor: pointer;
-} */
-
 .buttons {
     width: 500px;
     height: 500px;
+    display: block;
+    margin: 0 auto;
 }
 
 .clickable {
@@ -27,4 +25,18 @@
 
 .active {
     opacity: 0.5;
+}
+
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #999999;
+    color: black;
+    font-size: 3rem;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
